# recipe-creator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install_deps  main.py  pyproject.toml  requirements.txt
.claude/agents/: langgraph-agentcore-dev.md
.claude/skills/clean-comments/: SKILL.md
.claude/skills/code-cleanup/: SKILL.md
.claude/skills/python-code-quality/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gitleaks.yml
deploy/: README.md  docker-compose.yml
deploy/initdb/: 001-init-vector.sql
docs/: pgvector-setup.md
src/: recipe_builder.ipynb
src/common/: __init__.py  model_factory.py  streaming.py
src/vectorstore/: __init__.py  pgvector_backend.py
