[project]
name = "recipe-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "faiss-cpu==1.13.2",
    "importlib>=1.0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-aws>=1.5.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-aws>=1.1.0",
    "langgraph-cli[inmem]>=0.4.27",
    "langsmith[claude-agent-sdk,openai-agents]>=0.8.9",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    # Pinned to the combo that avoids the macOS faiss+torch double-libomp segfault
    # (matches the working RAG_Course_Agents env). See recipe_builder.ipynb cell 1.
    "torch==2.11.0",
]
