[project]
name = "recipe-creator"
version = "0.1.0"
description = "A multi-agent meal planner built on LangGraph/LangChain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "importlib>=1.0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-aws>=1.5.0",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-aws>=1.1.0",
    "langgraph-cli[inmem]>=0.4.27",
    "langsmith[claude-agent-sdk,openai-agents]>=0.8.9",
    "pandas>=3.0.3",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    # Pinned to the known-good torch for sentence-transformers on macOS
    # (matches the working RAG_Course_Agents env).
    "torch==2.11.0",
]
